removed extra bullets

--- a/ResumeRamaraju.html
+++ b/ResumeRamaraju.html
@@ -48,27 +48,28 @@ Final Year Project:
 <h3>DevOps Engineer</h3>
 <h4>Jan 2021 - Oct 2022</h4>
 
-<h2>AT&T, US</h2>
-<h3>Apr 2022 - Oct 2022</h3>
+<h3>AT&T, US</h2>
+<h4>Apr 2022 - Oct 2022</h3>
 <p>Automated several day to day operations and supported the frequent deployments. Guided new hires on Jenkins, Git, Linux, Continuous Monitoring and standard DevOps practices</p>
 
 <ul>
-<li>• Developed configuration management scripts to update and install various modules and libraries in servers across all SDLC environments</li>
-<li>• Developed and contributed to the maintenance of Continuous Integration and Deployment (CI/CD) pipelines</li>
-<li>• Implemented code masking strategies to keep the sensitive application properties secure during code deployment through CI/CD pipelines</li>
+<li>  Developed configuration management scripts to update and install various modules and libraries in servers across all SDLC environments</li>
+<li>  Implemented automation solutions saving close to 100 man-hours for the client</li>
+<li>  Created Application monitoring dashboards and setup various alerts for continuous monitoring</li>
+<li>  Regular deployment support and </li>
 </ul>
 
 
 
-<h2>The Medicines and Healthcare products Regulatory Agency, UK</h2>
-<h3>Jan 2021 - Apr 2022</h3>
-<p>Advocated Devops principles across various software development teams through CICD and Iac configuration management solutions. An active role in DevOps platform migrations from on-premises to cloud by liaising  with multiple teams</p>
+<h3>The Medicines and Healthcare products Regulatory Agency, UK</h2>
+<h4>Jan 2021 - Apr 2022</h3>
+<p>Advocated Devops principles across various software development teams through CICD and Iac configuration management solutions. An active role in DevOps platform migrations from on-premises to cloud</p>
 
 <ul>
-<li>• Developed and contributed to the maintenance of Continuous Integration and Deployment (CI/CD) pipelines</li>
-<li>• Automated close to 70 server and database health checks and scripted daily log retention jobs</li>
-<li>• Implemented code masking strategies for secure code deployments and custom git commit hooks to prevent commiting sensitive files</li>
-<li>• </li>
+<li>  Developed Continuous Integration and Continuous Deployment (CICD) pipelines in jenkins and github</li>
+<li>  Automated close to 70 server and database health checks and scripted daily log retention jobs</li>
+<li>  Implemented code masking strategies for secure code deployments and custom git commit hooks to prevent commiting sensitive files</li>
+<li>  Liaised with multiple stakeholders and supported DevOps platform migrations</li>
 </ul>
  
 
