--- a/ResumeRamaraju.html
+++ b/ResumeRamaraju.html
@@ -17,7 +17,7 @@
 	<div id="main" class="main-body">
 		<div id="inner-wrapper" class="side-wrapper">
 				<div class="profile-div">
-					<!--<img class="profile" src="assets/images/profile.png" alt="" /-->
+					<!--<img class="profile" src="assets/images/profile.png" alt="" /--->
 					<h1 class="name">Ramaraju Muppalla</h1>
 					<h3 class="tagline">DevOps Engineer</h3>
 				</div><!--//profile-container-->
