updating the front end - added the counter in JS

--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -256,6 +256,10 @@
 	</section>
 
 
+	<script src="fetchcount.js"></script>
+	<div id="counter"> Loading views...<a></a> </div><!--// footer -->
+
+	
 
 
 	</div>
