--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -72,11 +72,8 @@
 					<!-- 128100 is the code for profile emoji  -->
 
 				<div class="summary">
-					<p>Curious and innovative DevOps engineer and an incoming masters student in
-					Management Information Systems at Texas A&M University. Motivated to learn the
-					intricacies in leveraging data for businesses, cybersecurity, and the principles of Devops to drive the innovation forward. 
-					Looking forward to contribute to
-					people-centric technological innovations at a larger scale and impact.</p>
+					<p>Curious and innovative DevOps engineer and an incoming Management Information Systems student at Texas A&M University.
+					   Open to colloborate on DevOps and Cloud Projects. Interested in pro-bono consulting</p>
 
 				</div>
 
@@ -144,7 +141,7 @@
 
 				<div class="project client">
 					<div class="company">The Medicines and Healthcare products Regulatory Agency, UK</div>
-					<div class="term">JAn 2021 - Apr 2022</div>
+					<div class="term">Jan 2021 - Apr 2022</div>
 					<p>Advocated Devops principles across various software development teams through CICD and Iac configuration management solutions. An active role in DevOps platform migrations from on-premises to cloud</p>
 
 					<ul>
