--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -176,9 +176,9 @@
 				
 		
 				<tr><td width="30%">Java</td><td width="30%">Linux</td><td width="30%">Docker</td></tr>
-				<tr><td>Python</td><td>Windows</td><td>Kubernetes</td></tr>
-				<tr><td>Javascript</td><td>Bash & Powershell</td><td>Docker Swarm</td></tr>
-				<tr><td>HTML5 & CSS</td><td>Ansible</td><td>OWASP & Sonarqube</td></tr>
+				<tr><td>Python</td><td>Windows</td>Powershell<td></td></tr>
+				<tr><td>Javascript</td><td>Bash</td><td>Sonarqube</td></tr>
+				<tr><td>HTML5 & CSS</td><td>Ansible</td><td>OWASP</td></tr>
 				<tr><td>XML & YAML</td><td>Chef</td><td>Nexus</td></tr>
 				<tr><td>SQL</td><td>Terraform</td><td>Azure</td></tr>
 				<tr><td>GIT</td><td>Jira</td><td>Amazon Web Services</td></tr>
