--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -73,7 +73,7 @@
 
 				<div class="summary">
 					<p>Curious and innovative DevOps engineer and an incoming Management Information Systems student at Texas A&M University.
-					   Open to colloborate on DevOps and Cloud Projects. Interested in pro-bono consulting</p>
+					   Open to collaborate on DevOps and Cloud Projects. Interested in pro-bono technology consulting</p>
 
 				</div>
 
