--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -25,7 +25,7 @@
 					<div class="contact-div contact-block">
 						<ul class="list-unstyled contact-list">
 							<li class="email"><i class="envelope-letter"></i><a href="mailto: ramaraju8211@gmail.com">ramaraju8211@gmail.com</a></li>
-							<li class="phone"><i class="cell-phone"></i><a href="tel:859 512 3464">0123456789</a></li>
+							<!--<li class="phone"><i class="cell-phone"></i><a href="tel:859 512 3464">0123456789</a></li>-->
 							<li class="linkedin"><i class="linkedin-social"></i><a href="https://www.linkedin.com/in/ramaraju-muppalla-320545151" target="_blank">linkedin.com/in/ramaraju-muppalla</a></li>
 							<li class="github"><i class="github-repo-fork"></i><a href="https://github.com/Muppalla-Ramaraju" target="_blank">github.com/Muppalla-Ramaraju</a></li>
 						</ul>
@@ -73,7 +73,7 @@
 
 				<div class="summary">
 					<p>Curious and innovative DevOps engineer and an incoming Management Information Systems student at Texas A&M University.
-					   Open to collaborate on DevOps and Cloud Projects. Interested in pro-bono technology consulting</p>
+					   Open to collaborate on DevOps and Cloud Projects and pro-bono technology consulting till I leave for my masters.</p>
 
 				</div>
 
@@ -176,11 +176,11 @@
 				
 		
 				<tr><td width="30%">Java</td><td width="30%">Linux</td><td width="30%">Docker</td></tr>
-				<tr><td>Python</td><td>Windows</td>Powershell<td></td></tr>
-				<tr><td>Javascript</td><td>Bash</td><td>Sonarqube</td></tr>
-				<tr><td>HTML5 & CSS</td><td>Ansible</td><td>OWASP</td></tr>
-				<tr><td>XML & YAML</td><td>Chef</td><td>Nexus</td></tr>
-				<tr><td>SQL</td><td>Terraform</td><td>Azure</td></tr>
+				<tr><td>HTML5</td><td>Windows</td>Powershell<td></td></tr>
+				<tr><td>CSS</td><td>Bash</td><td>Sonarqube</td></tr>
+				<tr><td>XML</td><td>Ansible</td><td>OWASP</td></tr>
+				<tr><td>YAML</td><td>Chef</td><td>Nexus</td></tr>
+				<tr><td>SQL</td><td>IAC</td><td>Azure</td></tr>
 				<tr><td>GIT</td><td>Jira</td><td>Amazon Web Services</td></tr>
 				<tr><td>Jenkins</td><td>Confluence</td><td>Enterprise Cloud Migration</td></tr>
 				
