added github link in projects

--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -72,8 +72,8 @@
 					<!-- 128100 is the code for profile emoji  -->
 
 				<div class="summary">
-					<p>Curious and innovative DevOps engineer and an incoming Management Information Systems student at Texas A&M University.
-					   Open to collaborate on DevOps and Cloud Projects and pro-bono technology consulting till I leave for my masters.</p>
+					<p>Curious and innovative DevOps engineer and an incoming Management Information Systems graduate student at Texas A&M University.
+					   Interested in Technical Program Management. Open to collaborate on DevOps and Cloud Projects and pro-bono technology consulting.</p>
 
 				</div>
 
@@ -226,11 +226,9 @@
 			&#128451;Projects</h2>
 
 		<div class="projects">
-
-			<h3>The cloud resume challenge</h3>
-			<p>I am developing my resume analogous to a enterprise level full stack and cloud environment. I developed the front end for the resume website in HTML and CSS. Leveraging Amazon Web Services for the entire backend architecture.</p>
-			<h3>Automatic Fire Extinguishing Vehicle aided by Image processing</h3>
-			<p>Final year project as part of my bachelor's degree in mechanical engineering. We designed and fabricated an automatic fire fighting vehicle prototype. Navigation code using Arduino developed the image processing program in MATLAB.</p>
+			<h3 class="github-link"><a href="https://github.com/Muppalla-Ramaraju/MyCloudResume">The Cloud Resume Challenge</a></h3>
+			<p>I developed this resume website analogous to a web service in enterprise environment. I developed the front end using HTML, CSS and JavaScript. Used Amazon Web Services for the entire backend architecture. Github Actions for CICD.</p>
+			
 
 		</div>
 
