table cells formatted

--- a/frontend/resumeramaraju.html
+++ b/frontend/resumeramaraju.html
@@ -176,7 +176,7 @@
 				
 		
 				<tr><td width="30%">Java</td><td width="30%">Linux</td><td width="30%">Docker</td></tr>
-				<tr><td>HTML5</td><td>Windows</td>Powershell<td></td></tr>
+				<tr><td>HTML5</td><td>Windows</td><td>Powershell</td></tr>
 				<tr><td>CSS</td><td>Bash</td><td>Sonarqube</td></tr>
 				<tr><td>XML</td><td>Ansible</td><td>OWASP</td></tr>
 				<tr><td>YAML</td><td>Chef</td><td>Nexus</td></tr>
